--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,12 +24,10 @@
     </header>
     <main>
       <!--Шапка-->
-      <div>
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
-        </section>
-      </div>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
       <!--Особенности-->
       <section>
         <ul>
@@ -66,7 +64,7 @@
       </section>
       <!--Наша команда-->
       <section>
-        <h4>Наша команда</h4>
+        <h3>Наша команда</h3>
         <ul>
           <li>
             <img src="./images/team1.jpg" alt="worker1" width="270" height="260" />
@@ -95,9 +93,11 @@
     <footer>
       <a href="/">WebStudio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
