--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
       <a href="/">WebStudio</a>
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/467CXMGUrqbuEtQ98" target="_blank" title="google-maps">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li>
+            <a href="https://goo.gl/maps/467CXMGUrqbuEtQ98" target="_blank" title="google-maps"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
